--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-pack.e5a20bb4d381ee05ca6581a01e060b08c6a91585.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-pack.e5a20bb4d381ee05ca6581a01e060b08c6a91585.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">227bdaabc88bddbf2014788d72ef87e75f956795</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d439dc83cc4538b44634197f3dce1bf7ad2ad6c7</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\dotnet-pack.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">097dcd13d501eebfeb39909d4416659f08ee1145</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4046d6387253100d9858f8cf0a64080aaf5fac0f</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6eeba357ef3925897a6ee8770d49bc85b31bd633</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1fcc11b1d954bf19464ccce6a69c774eaf72b98f</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">이 항목은 .NET Core Tools Preview 2에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>dotnet-pack (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-pack.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core Tools Preview 4 버전의 경우 <bpt id="p1">[</bpt>dotnet-pack(Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-pack.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>dotnet-pack (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet-pack.md)</ept> topic.</source>
+          <target state="translated">.NET Core 도구 RC4 버전의 경우 <bpt id="p1">[</bpt>dotnet-pack(.NET Core 도구 RC4)<ept id="p1">](../preview3/tools/dotnet-pack.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Name</source>
           <target state="translated">이름</target>       </trans-unit>
