--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-publish.2562060ff216475a0561562b767283e16a407f66.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-publish.2562060ff216475a0561562b767283e16a407f66.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">83a706dd9fb2ee00b21426543e58621f9737a14d</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0d222382640fc239760f8f51c69f1f306674d7ca</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-publish.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e22a5639f3225fc88fea80acb16a5806040712c9</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b536c405e7e30ab444e2e58b349ea1c0d3e7aed5</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">07565a0cd45d54e11066bbc8566e7ae8fd331005</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d3ae3e84c6db5565ef8c383b52bf4774a4f37cab</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-publish, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-publish, CLI, CLI 명령, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-publish (Tooling Preview 4)</source>
-          <target state="translated">dotnet-publish(Tooling Preview 4)</target>       </trans-unit>
+          <source>dotnet-publish (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-publish(.NET Core 도구 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">이 항목은 Visual Studio 2017 RC - .NET Core Tools Preview 4에 적용됩니다.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">이 항목은 .NET Core 도구 RC4에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-publish<ept id="p1">](../../tools/dotnet-publish.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 버전의 경우 <bpt id="p1">[</bpt>dotnet-publish<ept id="p1">](../../tools/dotnet-publish.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
