--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet.f903689426b25f22b399552b2ca2db001cf5a708.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet.f903689426b25f22b399552b2ca2db001cf5a708.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">328b2f974d048427a182a7190d74b5bb22c3c13b</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c80b5e7e26366b5253816e81a8203f90690eec1e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2854dbf868827026ac9acc9be0ede7094bc40dd8</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ae0de27a21809065a9b9feb93b93baf40a99969b</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3592f99c298eefc7ea9a3b9f8c411cf6c4c0e171</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7bc3dd6e8878f13a1d24f2bb9b6e099d00e0be88</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet, CLI, CLI commands, .NET Core</source>
           <target state="translated">dotnet, CLI, CLI 명령, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet command (Tooling Preview 4)</source>
-          <target state="translated">dotnet 명령(Tooling Preview 4)</target>       </trans-unit>
+          <source>dotnet command (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet 명령(.NET Core 도구 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">이 항목은 Visual Studio 2017 RC - .NET Core Tools Preview 4에 적용됩니다.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">이 항목은 .NET Core 도구 RC4에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet command<ept id="p1">](../../tools/dotnet.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 버전의 경우 <bpt id="p1">[</bpt>dotnet 명령<ept id="p1">](../../tools/dotnet.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
@@ -133,8 +133,8 @@
           <source><bpt id="p1">[</bpt>dotnet-migrate<ept id="p1">](dotnet-migrate.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>dotnet-migrate<ept id="p1">](dotnet-migrate.md)</ept></target>       </trans-unit>
         <trans-unit id="141" translate="yes" xml:space="preserve">
-          <source>Migrates a valid Preview 2 project to a Preview 4 project.</source>
-          <target state="translated">유효한 Preview 2 프로젝트를 Preview 4 프로젝트로 마이그레이션합니다.</target>       </trans-unit>
+          <source>Migrates a valid Preview 2 project to a RC4 project.</source>
+          <target state="translated">유효한 Preview 2 프로젝트를 RC4 프로젝트로 마이그레이션합니다.</target>       </trans-unit>
         <trans-unit id="142" translate="yes" xml:space="preserve">
           <source><bpt id="p1">[</bpt>dotnet-msbuild<ept id="p1">](dotnet-msbuild.md)</ept></source>
           <target state="translated"><bpt id="p1">[</bpt>dotnet-msbuild<ept id="p1">](dotnet-msbuild.md)</ept></target>       </trans-unit>
