--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/layering.d5959d31e867010572042cfd402c3e40afa72bac.ko-kr.xlf
@@ -2,28 +2,28 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">261af1368f9966d8f485ab9ba252f15da31e05b2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">305d046c698ca9f7ebb5ac56387cfef00145393e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\layering.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">01b6528b0db10cfeb5f021fa804defd805d58dcf</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7af36cc8dcb1608e61a134ae45e762b254a39789</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">82d8d7f230ca69b496d3d3ea0e1bd7f81395ae6d</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1d4fe1b39ca865269209218de945f037cf090095</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>.NET Core Command Line Tools Preview 4 Architecture | Microsoft Docs</source>
-          <target state="translated">.NET Core 명령줄 도구 Preview 4 아키텍처 | Microsoft 문서</target>       </trans-unit>
+          <source>.NET Core Command Line Tools RC4 Architecture | Microsoft Docs</source>
+          <target state="translated">.NET Core 명령줄 도구 RC4 아키텍처 | Microsoft 문서</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>Preview 4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
-          <target state="translated">Preview 4를 통해 전체.NET Core 도구를 계층화하는 방법에 대한 특정 변경 내용을 설명합니다.</target>       </trans-unit>
+          <source>RC4 brings about certain changes to the way the overall .NET Core tools are layered.</source>
+          <target state="translated">RC4를 통해 전체 .NET Core 도구를 계층화하는 방법이 일부 변경됩니다.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>CLI, extensibility, custom commands, .NET Core</source>
           <target state="translated">CLI, 확장성, 사용자 지정 명령, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>High-level overview of changes in CLI Preview 4</source>
-          <target state="translated">CLI Preview 4의 변경 사항에 대한 심화 설명</target>       </trans-unit>
+          <source>High-level overview of changes in CLI RC4</source>
+          <target state="translated">CLI RC4의 변경 사항에 대한 개괄적 설명</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
           <source>This document will describe in high-level the changes that moving from <ph id="ph1">`project.json`</ph> to MSBuild and <ph id="ph2">`csproj`</ph> project system bring.</source>
           <target state="translated">이 문서에서는 <ph id="ph1">`project.json`</ph>에서 MSBuild 및 <ph id="ph2">`csproj`</ph> 프로젝트 시스템으로 이동으로 인해 발생하는 높은 수준의 변경 내용에 대해 설명합니다.</target>       </trans-unit>
@@ -37,11 +37,11 @@
           <source>Moving away from project.json</source>
           <target state="translated">project.json로부터의 이동</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>The biggest change in the Preview 4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
-          <target state="translated">.NET Core용 Preview 4 도구에서의 가장 큰 변화는 프로젝트 시스템이 <bpt id="p1">[</bpt>project.json에서 csproj로 이동<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept>한 점입니다.</target>       </trans-unit>
+          <source>The biggest change in the RC4 tooling for .NET Core is certainly the <bpt id="p1">[</bpt>move away from project.json to csproj<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept> as the project system.</source>
+          <target state="translated">.NET Core용 RC4 도구에서의 가장 큰 변화는 프로젝트 시스템이 <bpt id="p1">[</bpt>project.json에서 csproj로 이동<ept id="p1">](https://blogs.msdn.microsoft.com/dotnet/2016/05/23/changes-to-project-json/)</ept>한 점입니다.</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
-          <source>Preview 4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
-          <target state="translated">명령줄 도구의 Preview 4 버전은 project.json에 대한 어떤 지원도 포함되지 않은 .NET Core 명령줄 도구의 첫 번째 릴리스입니다.</target>       </trans-unit>
+          <source>RC4version of the command line tools is the first release of .NET Core command line tooling that does not contain any support for project.json.</source>
+          <target state="translated">명령줄 도구의 RC4 버전은 .NET Core 명령줄 도구 중 project.json에 대한 어떤 지원도 포함하지 않은 첫 번째 릴리스입니다.</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
           <source>That means that it cannot be used to build, run or publish project.json based applications and libraries.</source>
           <target state="translated">즉, project.json 기반 응용 프로그램 및 라이브러리를 빌드, 실행 또는 게시하는 데 사용할 수 없습니다.</target>       </trans-unit>
@@ -94,8 +94,8 @@
           <source>With the move to the new project system, the previous diagram changes:</source>
           <target state="translated">새 프로젝트 시스템으로의 이전으로 이전 다이어그램이 다음과 같이 변경됩니다.</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
-          <source>Preview 4 tools high-level architecture</source>
-          <target state="translated">Preview 4 도구에 대한 상위 수준 아키텍처</target>       </trans-unit>
+          <source>RC4 tools high-level architecture</source>
+          <target state="translated">RC4 도구에 대한 상위 수준 아키텍처</target>       </trans-unit>
         <trans-unit id="129" translate="yes" xml:space="preserve">
           <source>The main difference is that the CLI is not the foundational layer anymore; this role is now filled by the "shared SDK component".</source>
           <target state="translated">주요 차이점은 CLI가 더 이상 기본 계층이 아니라는 점입니다. 이 역할은 이제 "공유된 SDK 구성 요소"에 의해 채워집니다.</target>       </trans-unit>
@@ -124,8 +124,8 @@
           <source>Since these are MSBuild targets, you can also use raw MSBuild to execute them using the <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> command.</source>
           <target state="translated">이는 MSBuild 대상이므로, 원시 MSBuild를 사용하여 <bpt id="p1">[</bpt>dotnet msbuild<ept id="p1">](dotnet-msbuild.md)</ept> 명령을 통해 실행할 수도 있습니다.</target>       </trans-unit>
         <trans-unit id="138" translate="yes" xml:space="preserve">
-          <source>Preview 4 CLI commands</source>
-          <target state="translated">Preview 4 CLI 명령</target>       </trans-unit>
+          <source>RC4 CLI commands</source>
+          <target state="translated">RC4 CLI 명령</target>       </trans-unit>
         <trans-unit id="139" translate="yes" xml:space="preserve">
           <source>The shared SDK component means that the majority of existing CLI commands have been re-implemented as MSBuild tasks and targets.</source>
           <target state="translated">공유된 SDK 구성 요소는 대부분의 기존 CLI 명령들이 MSBuild 작업 및 대상으로 다시 구현되었음을 의미합니다.</target>       </trans-unit>
@@ -142,8 +142,8 @@
           <source>These commands still do what you expect them to do (new up a project, build it, publish it, pack it and so on).</source>
           <target state="translated">이러한 명령은 여전히 사용자가 예상하는 대로 수행됩니다(프로젝트 새로 구동, 빌드, 게시, 압축 등).</target>       </trans-unit>
         <trans-unit id="144" translate="yes" xml:space="preserve">
-          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or Preview 4 documentation on this site to get familiar with any changes.</source>
-          <target state="translated">대부분의 옵션은 변경되지 않고 그대로 있습니다. 변경 사항에 대해 살펴보려면 이 사이트의 Preview 4 설명서 또는 명령의 도움말 화면(<ph id="ph1">`dotent &lt;command&gt; --help`</ph> 사용)에서 참조할 수 있습니다.</target>       </trans-unit>
+          <source>Majority of the options are not changed, and are still there, and you can consult either the commands' help screens (using <ph id="ph1">`dotent &lt;command&gt; --help`</ph>) or RC4 documentation on this site to get familiar with any changes.</source>
+          <target state="translated">대부분의 옵션은 변경되지 않고 그대로 있습니다. 이 사이트의 RC4 설명서 또는 명령의 도움말 화면(<ph id="ph1">`dotent &lt;command&gt; --help`</ph> 사용)을 참조하여 변경 사항에 대해 살펴볼 수 있습니다.</target>       </trans-unit>
         <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>From an execution perspective, the CLI commands will take their parameters and construct a call to "raw" MSBuild that will set the needed properties and run the desired target.</source>
           <target state="translated">실행 관점에서 CLI 명령은 매개 변수를 사용하고 "원시" MSBuild에 대한 호출을 생성하여 필요한 속성을 설정하고 원하는 대상을 실행합니다.</target>       </trans-unit>
@@ -163,11 +163,11 @@
           <source>Conclusion</source>
           <target state="translated">결론</target>       </trans-unit>
         <trans-unit id="151" translate="yes" xml:space="preserve">
-          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with Preview 4.</source>
-          <target state="translated">이 문서에서는 Preview 4에서 제공되는 전반적인 CLI 도구 아키텍처 및 기능에서 발생하는 높은 수준의 변경에 대해 개괄적으로 살펴보았습니다.</target>       </trans-unit>
+          <source>This document outlined at a high-level the changes that are happening to the overall CLI tooling architecture and functioning that are coming with RC4.</source>
+          <target state="translated">이 문서에서는 RC4에서 제공되는 전반적인 CLI 도구 아키텍처 및 기능에서 변경된 내용을 개괄적으로 살펴보았습니다.</target>       </trans-unit>
         <trans-unit id="152" translate="yes" xml:space="preserve">
-          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in Preview 4.</source>
-          <target state="translated">또한 Preview 4에서 CLI 명령이 기술적인 관점에서 작동하는 방식에 대해 살펴보았을 뿐만 아니라 공유된 SDK 구성 요소의 개념도 소개했습니다.</target>       </trans-unit>
+          <source>It has introduced the notion of the shared SDK component as well as explained how the CLI commands function, from a technical perspective, in RC4.</source>
+          <target state="translated">또한 RC4에서 CLI 명령이 작동하는 방식을 기술적인 관점에서 설명했을 뿐만 아니라 공유 SDK 구성 요소의 개념도 소개했습니다.</target>       </trans-unit>
       </group>
     </body>
   </file>
