--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/telemetry.1c2d2f66e2f7ddb65a3162d84b46390eaf6c700e.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/telemetry.1c2d2f66e2f7ddb65a3162d84b46390eaf6c700e.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7557d25271bad25854a315c79cf427727e3b0e32</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f19efabc4330682ebfe6e38384086e2338cd6264</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\telemetry.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e833b8dfe54f34f260fc9c7c8cf01fff0fe3ab8e</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2ec710516a62954b1e313639c6a1466cc6d2706a</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">749915c945b57c36d357d57f6ac3e63ac74e68e4</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0db2024ff20465848c473aaf386e5769c341417f</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">이 항목은 .NET Core Tools Preview 2에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>.NET Core Tools Telemetry (Tooling Preview 4)<ept id="p1">](../preview3/tools/telemetry.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core Tools Preview 4 버전의 경우 <bpt id="p1">[</bpt>.NET Core 도구 원격 분석(Tooling Preview 4)<ept id="p1">](../preview3/tools/telemetry.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>.NET Core Tools Telemetry (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/telemetry.md)</ept> topic.</source>
+          <target state="translated">.NET Core 도구 RC4 버전의 경우 <bpt id="p1">[</bpt>.NET Core 도구 원격 분석(.NET Core 도구 RC4)<ept id="p1">](../preview3/tools/telemetry.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>The .NET Core Tools include a <bpt id="p1">[</bpt>telemetry feature<ept id="p1">](https://github.com/dotnet/cli/pull/2145)</ept> that collects usage information.</source>
           <target state="translated">.NET Core 도구에는 사용 정보를 수집하는 <bpt id="p1">[</bpt>원격 분석 기능<ept id="p1">](https://github.com/dotnet/cli/pull/2145)</ept>이 포함되어 있습니다.</target>       </trans-unit>
