--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/using-ci-with-cli.d19d11be623872ee762be568faec693a17cd980e.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/using-ci-with-cli.d19d11be623872ee762be568faec693a17cd980e.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2acfb2bf7732aa17e850b9adcf03dfcb7993908b</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">95c7f0f9911c7cb37c12afec74d0e942db77fbf6</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\using-ci-with-cli.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f58455cc14273ae119b595d530c29a233a67691a</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6d1e64dbd59650c4a0912891814961505889e764</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">72703a5f97799da492e3eea89b32195dfaf641b7</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d87a776fe9954c175f8b88295f3fe0c856467e20</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Using .NET Core SDK and tools in Continuous Integration (CI) (Tooling Preview 4)</source>
-          <target state="translated">.NET Core SDK 및 CI(연속 통합)의 도구 사용(Tooling Preview 4)</target>       </trans-unit>
+          <source>Using .NET Core SDK and tools in Continuous Integration (CI) (.NET Core Tools RC4)</source>
+          <target state="translated">.NET Core SDK 및 CI(연속 통합)의 도구 사용(.NET Core 도구 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">이 항목은 Visual Studio 2017 RC - .NET Core Tools Preview 4에 적용됩니다.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">이 항목은 .NET Core 도구 RC4에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Using .NET Core SDK and tools in Continuous Integration (CI)<ept id="p1">](../../tools/using-ci-with-cli.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 버전의 경우 <bpt id="p1">[</bpt>.NET Core SDK 및 CI(연속 통합)의 도구 사용<ept id="p1">](../../tools/using-ci-with-cli.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
