--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d4ca76f3de38b5d05868292d5c4bb8e3b0c7fdf2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f0c62647c5817db2057c60a7a95a62f08f7889a5</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-new.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">387adf765214dfa3b2fbe827bfbd62f6346c9fdd</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">33ab04767e9b59d18373121ce8014ecf71b9fb83</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5294b49b50de10e3f91f51920deea9eb0cc088e5</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9405a412a93e74394f2034c9cd1abbba59dbec8e</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-new, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-new, CLI, CLI 명령, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-new (Tooling Preview 4)</source>
-          <target state="translated">dotnet-new(Tooling Preview 4)</target>       </trans-unit>
+          <source>dotnet-new (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-new(.NET Core 도구 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">이 항목은 Visual Studio 2017 RC - .NET Core Tools Preview 4에 적용됩니다.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">이 항목은 .NET Core 도구 RC4에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 버전의 경우 <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
@@ -34,8 +34,8 @@
           <source>Name</source>
           <target state="translated">이름</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
-          <source>dotnet-new -- Creates a new .NET Core project in the current directory.</source>
-          <target state="translated">dotnet-new -- 현재 디렉터리에 새 .NET Core 프로젝트를 만듭니다.</target>       </trans-unit>
+          <source>dotnet-new - Creates a new .NET Core project in the current directory</source>
+          <target state="translated">dotnet-new - 현재 디렉터리에 새 .NET Core 프로젝트를 만듭니다.</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
           <source>Synopsis</source>
           <target state="translated">개요</target>       </trans-unit>
@@ -43,56 +43,122 @@
           <source>Description</source>
           <target state="translated">설명</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command Line Interface (CLI) toolset.</source>
+          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command-line interface (CLI) toolset.</source>
           <target state="translated"><ph id="ph1">`dotnet new`</ph> 명령은 CLI(명령줄 인터페이스) 도구 집합을 사용해 보기 위해 유효한 .NET Core 프로젝트 및 샘플 소스 코드를 초기화하는 편리한 방법을 제공합니다.</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>This command is invoked in the context of a directory.</source>
           <target state="translated">이 명령은 디렉터리의 컨텍스트에서 호출됩니다.</target>       </trans-unit>
         <trans-unit id="113" translate="yes" xml:space="preserve">
-          <source>When invoked, the command will result in two main artifacts being dropped to the current directory:</source>
-          <target state="translated">이 명령은 호출되면 두 가지 주요 아티팩트를 현재 디렉터리로 끌어 옵니다.</target>       </trans-unit>
+          <source>When invoked, the command will scaffold out the resources and files according to the template and options passed into the command.</source>
+          <target state="translated">호출되면 이 명령은 전달받은 옵션 및 템플릿에 따라 리소스 및 파일을 스캐폴딩합니다.</target>       </trans-unit>
         <trans-unit id="114" translate="yes" xml:space="preserve">
-          <source>A <ph id="ph1">`Program.cs`</ph> (or <ph id="ph2">`Program.fs`</ph>) file that contains a sample "Hello World" program.</source>
-          <target state="translated">샘플 "Hello World" 프로그램을 포함하는 <ph id="ph1">`Program.cs`</ph>(또는 <ph id="ph2">`Program.fs`</ph>) 파일</target>       </trans-unit>
-        <trans-unit id="115" translate="yes" xml:space="preserve">
-          <source>A valid csproj project file.</source>
-          <target state="translated">유효한 csproj 프로젝트 파일입니다.</target>       </trans-unit>
-        <trans-unit id="116" translate="yes" xml:space="preserve">
           <source>After this, the project is ready to be compiled and/or edited further.</source>
           <target state="translated">그런 다음 프로젝트를 추가로 컴파일하거나 편집할 수 있습니다.</target>       </trans-unit>
+        <trans-unit id="115" translate="yes" xml:space="preserve">
+          <source>Arguments</source>
+          <target state="translated">인수</target>       </trans-unit>
+        <trans-unit id="116" translate="yes" xml:space="preserve">
+          <source>template - The template to instansiate when the command is invoked.</source>
+          <target state="translated">템플릿 - 명령이 호출될 때 인스턴스화할 템플릿입니다.</target>       </trans-unit>
         <trans-unit id="117" translate="yes" xml:space="preserve">
+          <source>The command contains a default list of templates; use <ph id="ph1">`dotnet new --help`</ph>.</source>
+          <target state="translated">명령에는 템플릿의 기본 목록이 포함되어 있습니다. <ph id="ph1">`dotnet new --help`</ph>를 사용하세요.</target>       </trans-unit>
+        <trans-unit id="118" translate="yes" xml:space="preserve">
           <source>Options</source>
           <target state="translated">옵션</target>       </trans-unit>
-        <trans-unit id="118" translate="yes" xml:space="preserve">
-          <source>Prints out a short help for the command.</source>
-          <target state="translated">명령에 대한 간단한 도움말을 출력합니다.</target>       </trans-unit>
         <trans-unit id="119" translate="yes" xml:space="preserve">
-          <source>Language of the project.</source>
-          <target state="translated">프로젝트의 언어입니다.</target>       </trans-unit>
+          <source>List templates containing the specified name.</source>
+          <target state="translated">지정된 이름을 포함하는 템플릿을 나열합니다.</target>       </trans-unit>
         <trans-unit id="120" translate="yes" xml:space="preserve">
-          <source>Defaults to <ph id="ph1">`C#`</ph>.</source>
-          <target state="translated">기본값은 <ph id="ph1">`C#`</ph>입니다.</target>       </trans-unit>
+          <source>Specifies the language of the template to create</source>
+          <target state="translated">만들 템플릿의 언어를 지정합니다.</target>       </trans-unit>
         <trans-unit id="121" translate="yes" xml:space="preserve">
-          <source>Other valid values are <ph id="ph1">`csharp`</ph> and <ph id="ph2">`cs`</ph>.</source>
-          <target state="translated">다른 유효한 값은 <ph id="ph1">`csharp`</ph> 및 <ph id="ph2">`cs`</ph>입니다.</target>       </trans-unit>
+          <source>The name for the output being created.</source>
+          <target state="translated">생성되는 출력의 이름입니다.</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Type of the project.</source>
-          <target state="translated">프로젝트의 형식입니다.</target>       </trans-unit>
+          <source>If no name is specified, the name of the current directory is used.</source>
+          <target state="translated">이름을 지정하지 않으면 현재 디렉터리의 이름이 사용됩니다.</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
-          <source>Valid values for C# are <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> and <ph id="ph4">`xunittest`</ph> and for F# only <ph id="ph5">`console`</ph> is valid.</source>
-          <target state="translated">C#에 유효한 값은 <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> 및 <ph id="ph4">`xunittest`</ph>이고 F#의 경우 <ph id="ph5">`console`</ph>만 유효합니다.</target>       </trans-unit>
+          <source>Location to place the generated output.</source>
+          <target state="translated">생성된 출력을 배치할 위치입니다.</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
+          <source>Shows all templates for a specific type of project.</source>
+          <target state="translated">특정 프로젝트 형식에 대한 템플릿을 모두 표시합니다.</target>       </trans-unit>
+        <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>Prints out help for the command.</source>
+          <target state="translated">명령에 대한 도움말을 출력합니다.</target>       </trans-unit>
+        <trans-unit id="126" translate="yes" xml:space="preserve">
+          <source>Template options</source>
+          <target state="translated">템플릿 옵션</target>       </trans-unit>
+        <trans-unit id="127" translate="yes" xml:space="preserve">
+          <source>Each project template may have additional options available.</source>
+          <target state="translated">각 프로젝트 템플릿에는 사용할 수 있는 추가 옵션이 있을 수 있습니다.</target>       </trans-unit>
+        <trans-unit id="128" translate="yes" xml:space="preserve">
+          <source>The core templates, for example, have the following.</source>
+          <target state="translated">예를 들어 코어 템플릿에는 다음이 있습니다.</target>       </trans-unit>
+        <trans-unit id="129" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="130" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> - 대상으로 할 프레임워크를 지정합니다.</target>       </trans-unit>
+        <trans-unit id="131" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">값: netcoreapp1.0 또는 netcoreapp1.1(기본값: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="132" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="133" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> - 대상으로 할 프레임워크를 지정합니다.</target>       </trans-unit>
+        <trans-unit id="134" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">값: netcoreapp1.0 또는 netcoreapp1.1(기본값: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="135" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="136" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> - 대상으로 할 프레임워크를 지정합니다.</target>       </trans-unit>
+        <trans-unit id="137" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">값: netcoreapp1.0 또는 netcoreapp1.1(기본값: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="138" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-au|--authentication`</ph> -  The type of authentication to use.</source>
+          <target state="translated"><ph id="ph1">`-au|--authentication`</ph> - 사용할 인증 형식입니다.</target>       </trans-unit>
+        <trans-unit id="139" translate="yes" xml:space="preserve">
+          <source>Values: None or Individual (Default: None)</source>
+          <target state="translated">값: None 또는 Individual(기본값: None)</target>       </trans-unit>
+        <trans-unit id="140" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-uld|--use-local-db`</ph> - Whether or not to use LocalDB instead of SQLite.</source>
+          <target state="translated"><ph id="ph1">`-uld|--use-local-db`</ph> - SQLite 대신 LocalDB를 사용할지 여부입니다.</target>       </trans-unit>
+        <trans-unit id="141" translate="yes" xml:space="preserve">
+          <source>Values: true or false (Default: false)</source>
+          <target state="translated">값: true 또는 false(기본값: false)</target>       </trans-unit>
+        <trans-unit id="142" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="143" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph> - 대상으로 할 프레임워크를 지정합니다.</target>       </trans-unit>
+        <trans-unit id="144" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0, netcoreapp1.1 and netstandard1.0 - 1.6 (Default: netstandard1.4).</source>
+          <target state="translated">값: netcoreapp1.0, netcoreapp1.1 및 netstandard1.0 - 1.6(기본값: netstandard1.4)</target>       </trans-unit>
+        <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>Examples</source>
           <target state="translated">예제</target>       </trans-unit>
-        <trans-unit id="125" translate="yes" xml:space="preserve">
-          <source>Create a C# console application project in the current directory:</source>
-          <target state="translated">현재 디렉터리에 C# 콘솔 응용 프로그램 프로젝트를 만듭니다.</target>       </trans-unit>
-        <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source><ph id="ph1">`dotnet new`</ph> or <ph id="ph2">`dotnet new --lang c#`</ph></source>
-          <target state="translated"><ph id="ph1">`dotnet new`</ph> 또는 <ph id="ph2">`dotnet new --lang c#`</ph></target>       </trans-unit>
-        <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Create a new ASP.NET Core C# application project in the current directory:</source>
-          <target state="translated">현재 디렉터리에 새 ASP.NET Core C# 응용 프로그램 프로젝트를 만듭니다.</target>       </trans-unit>
+        <trans-unit id="146" translate="yes" xml:space="preserve">
+          <source>Create a F# console application project in the current directory:</source>
+          <target state="translated">현재 디렉터리에 F# 콘솔 응용 프로그램 프로젝트를 만듭니다.</target>       </trans-unit>
+        <trans-unit id="147" translate="yes" xml:space="preserve">
+          <source>Create a new ASP.NET Core C# MVC application project in the current directory with no authentication targeting .NET Core 1.0:</source>
+          <target state="translated">.NET Core 1.0을 대상으로 하는 인증 없이 현재 디렉터리에 새 ASP.NET Core C# MVC 응용 프로그램 프로젝트를 만듭니다.</target>       </trans-unit>
+        <trans-unit id="148" translate="yes" xml:space="preserve">
+          <source>Create a new XUnit application targeting .NET Core 1.1:</source>
+          <target state="translated">.NET Core 1.1을 대상으로 새 XUnit 응용 프로그램을 만듭니다.</target>       </trans-unit>
+        <trans-unit id="149" translate="yes" xml:space="preserve">
+          <source>List all templates available for MVC:</source>
+          <target state="translated">MVC에 대해 사용할 수 있는 모든 템플릿을 나열합니다.</target>       </trans-unit>
       </group>
     </body>
   </file>
