--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/index.69eda7c852108c787b6219d9b8523599a75f6f4f.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/index.69eda7c852108c787b6219d9b8523599a75f6f4f.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">257fb74d0c07b0f203fa07edc08829b21b48bab6</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1d7a3d90c6ba9079fe5d36b9c9922928d6a6f137</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\index.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b1e7171b59875239dc2071d5bd01cf12781cd231</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b0dbe2a455f6e302897175f3c7badea75f2e747c</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6d045165cf9ba3ec5c8f720cf38c728bdea8900f</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2b23845df77f85245c78f22af1aa52150a6acba2</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">이 항목은 .NET Core Tools Preview 2에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>.NET Core command-line interface tools (Tooling Preview 4)<ept id="p1">](../preview3/tools/index.md)</ept> topic.</source>
-          <target state="translated">Visual Studio 2017 RC - .NET Core Tools Preview 4 버전의 경우 <bpt id="p1">[</bpt>.NET Core 명령줄 인터페이스 도구(Tooling Preview 4)<ept id="p1">](../preview3/tools/index.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>.NET Core command-line interface tools (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/index.md)</ept> topic.</source>
+          <target state="translated">.NET Core 도구 RC4 버전의 경우 <bpt id="p1">[</bpt>.NET Core 명령줄 인터페이스 도구(.NET Core 도구 RC4)<ept id="p1">](../preview3/tools/index.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>The .NET Core command-line interface (CLI) is a new foundational cross-platform toolchain for developing .NET Core applications.</source>
           <target state="translated">.NET Core CLI(명령줄 인터페이스)는 .NET Core 응용 프로그램 개발에 사용되는 새로운 기본 플랫폼 간 도구 체인입니다.</target>       </trans-unit>
