--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/using-with-xplat-cli-msbuild.aa34c5f9c158bf8119e47e7ddb734c84d85be785.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/using-with-xplat-cli-msbuild.aa34c5f9c158bf8119e47e7ddb734c84d85be785.ko-kr.xlf
@@ -2,19 +2,19 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e84012937be6ede9170dde7ff88575d2f4fa1052</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4c17da61f492e17edf4d69d79be430ead3dd0cc6</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tutorials\using-with-xplat-cli-msbuild.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fe69f6ce5230af24d0ba355c430f1008cc470710</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f19b6664b43b2daa42b5df3c9238a96516955e11</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bcbfbf9c4088dc5a89fe219799654631a705b1e1</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">53eec76e487f494b2b5aa4b5c1366e39a90e382d</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (SDK Preview 4) | Microsoft Docs</source>
-          <target state="translated">명령줄을 사용하여 Windows/Linux/macOS에서 .NET Core 시작(SDK Preview 4) | Microsoft 문서</target>       </trans-unit>
+          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (.NET Core Tools RC4) | Microsoft Docs</source>
+          <target state="translated">명령줄을 사용하여 Windows/Linux/macOS에서 .NET Core 시작(.NET Core 도구 RC4) | Microsoft 문서</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
           <source>Getting started with .NET Core on Windows, Linux, or macOS using the .NET Core command line interface (CLI)</source>
           <target state="translated">CLI(명령줄 인터페이스)를 사용하여 Windows, Linux 또는 macOS에서 .NET Core 시작</target>       </trans-unit>
@@ -22,11 +22,11 @@
           <source>.NET, .NET Core</source>
           <target state="translated">.NET, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (Tooling Preview 4)</source>
-          <target state="translated">명령줄을 사용하여 Windows/Linux/macOS에서 .NET Core 시작(Tooling Preview 4)</target>       </trans-unit>
+          <source>Getting started with .NET Core on Windows/Linux/macOS using the command line (.NET Core Tools RC4)</source>
+          <target state="translated">명령줄을 사용하여 Windows/Linux/macOS에서 .NET Core 시작(.NET Core 도구 RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">이 항목은 Visual Studio 2017 RC - .NET Core Tools Preview 4에 적용됩니다.</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">이 항목은 .NET Core 도구 RC4에 적용됩니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>Getting started with .NET Core on Windows/Linux/macOS using the command line<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> topic.</source>
           <target state="translated">.NET Core Tools Preview 2 버전의 경우 <bpt id="p1">[</bpt>명령줄을 사용하여 Windows/Linux/macOS에서 .NET Core 시작<ept id="p1">](../../tutorials/using-with-xplat-cli.md)</ept> 항목을 참조하세요.</target>       </trans-unit>
@@ -44,10 +44,10 @@
           <target state="translated">.NET Core CLI 도구 집합에 익숙하지 않은 경우 <bpt id="p1">[</bpt>.NET Core SDK 개요<ept id="p1">](../tools/dotnet.md)</ept>를 읽어 보세요.</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
           <source>Prerequisites</source>
-          <target state="translated">필수 조건</target>       </trans-unit>
+          <target state="translated">필수 구성 요소</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
-          <source>Before you begin, ensure you have <bpt id="p1">[</bpt>.NET Core CLI tooling Preview 4 or later<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>.</source>
-          <target state="translated">시작하기 전에 <bpt id="p1">[</bpt>.NET Core CLI 도구 Preview 4 이상<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>이 있는지 확인합니다.</target>       </trans-unit>
+          <source>Before you begin, ensure you have <bpt id="p1">[</bpt>.NET Core CLI tooling RC4 or later<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>.</source>
+          <target state="translated">시작하기 전에 <bpt id="p1">[</bpt>.NET Core CLI 도구 RC4 이상<ept id="p1">](https://github.com/dotnet/core/blob/master/release-notes/preview3-download.md)</ept>이 있는지 확인합니다.</target>       </trans-unit>
         <trans-unit id="113" translate="yes" xml:space="preserve">
           <source>You'll also need a text editor.</source>
           <target state="translated">텍스트 편집기도 필요합니다.</target>       </trans-unit>
@@ -250,8 +250,8 @@
           <source>The next step is to create awesome console apps of your own!</source>
           <target state="translated">다음 단계는 자신만의 멋진 콘솔 앱을 만드는 것입니다.</target>       </trans-unit>
         <trans-unit id="180" translate="yes" xml:space="preserve">
-          <source>If a more advanced example of a console app interests you, check out the next tutorial: <bpt id="p1">[</bpt>Organizing and testing projects with the .NET Core command line (SDK Preview 4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>.</source>
-          <target state="translated">흥미로운 고급 콘솔 앱의 예제를 보려면 <bpt id="p1">[</bpt>.NET Core 명령줄을 사용하여 프로젝트 구성 및 테스트(SDK Preview 4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept> 자습서를 참조하세요.</target>       </trans-unit>
+          <source>If a more advanced example of a console app interests you, check out the next tutorial: <bpt id="p1">[</bpt>Organizing and testing projects with the .NET Core command line (.NET Core Tools RC4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept>.</source>
+          <target state="translated">흥미로운 고급 콘솔 앱의 예제를 보려면 <bpt id="p1">[</bpt>.NET Core 명령줄을 사용하여 프로젝트 구성 및 테스트(.NET Core 도구 RC4)<ept id="p1">](using-with-xplat-cli-msbuild-folders.md)</ept> 자습서를 참조하세요.</target>       </trans-unit>
       </group>
     </body>
   </file>
